# maven-ircd

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  license.txt  readme.md
.github/workflows/: build.yml
app/: CMakeLists.txt  main.c
core/: CMakeLists.txt
core/doc/: Doxyfile
core/src/: CMakeLists.txt  conf.c  ctx.c  event.c  hash_table.c  irc_parse.c  log.c  net.c  net_epoll.c  siphash.c  siphash.h  util.c
core/src/include/core/: compiler.h  conf.h  ctx.h  event.h  hash_table.h  irc_parse.h  log.h  net.h  user.h  util.h
core/src/include/private/core_private/: compiler.h  irc_parse.h  log.h  net.h
core/src/include/public/core/: conf.h  event.h  hash_table.h  net.h
core/src/private/: compiler.h  conf.c  ctx.c  event.c  irc_parse.c  irc_parse.h  log.c  net.c  net_epoll.c  net_platform.h
core/src/public/core/: conf.h  ctx.h  event.h  log.h  net.h  types.h
core/tests/: CMakeLists.txt  conf.cpp  core_test_conf.c  core_test_irc_parse.c
src/: CMakeLists.txt
src/core/: CMakeLists.txt
src/core/src/: CMakeLists.txt
src/core/src/private/: conf.c  ctx.c  log.c  log.h  net.c  net.h  platform_net.h  platform_net_unix.c  platform_util.h  platform_util_unix.c  util.c  util.h
src/core/src/public/core/: conf.h  ctx.h  log.h  net.h  types.h
